--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
       %meta(name="description" content="сайт о раскрутке и продвижении сайтов")
       %meta(name="keywords" content="раскрутка продвижение сайтов сайта")
     %meta(name="author" content="млип")
+    %meta(name='yandex-verification' content='560792cb59afb704')
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -76,8 +77,30 @@
         %p 
           &copy; МЛИП -
           = link_to 'http://mlip.ru', 'http://mlip.ru', title: 'создание и продвижение сайтов в воронеже'
+          / Yandex.Metrika informer
+          %a{:href => "http://metrika.yandex.ru/stat/?id=19962244&amp;from=informer", :rel => "nofollow", :target => "_blank", class: "pull-right"}
+            %img{:alt => "Яндекс.Метрика", :src => "//bs.yandex.ru/informer/19962244/3_0_D7EDC6FF_B7CDA6FF_0_pageviews", :style => "width:88px; height:31px; border:0;", :title => "Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)"}/
+          / /Yandex.Metrika informer
+          
     /
       Javascripts
       \==================================================
     / Placed at the end of the document so the pages load faster
     = javascript_include_tag "application"
+    / Yandex.Metrika counter
+    :javascript
+      (function (d, w, c) { 
+        (w[c] = w[c] || []).push(function() { 
+          try { 
+            w.yaCounter19962244 = new Ya.Metrika({id:19962244, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true}); 
+          } 
+        catch(e) { } 
+        }); 
+        var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; 
+        if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } 
+      })(document, window, "yandex_metrika_callbacks");
+    %noscript
+      %div
+        %img{:alt => "", :src => "//mc.yandex.ru/watch/19962244", :style => "position:absolute; left:-9999px;"}
+    / /Yandex.Metrika counter
+
